--- a/denote-explore.org
+++ b/denote-explore.org
@@ -260,7 +260,7 @@ This package is available through MELPA. The configuration below customises all 
      ("C-c w e z" . denote-explore-zero-keywords)
      ("C-c w e s" . denote-explore-single-keywords)
      ("C-c w e o" . denote-explore-sort-keywords)
-     ("C-c w e r" . denote-explore-rename-keywords)
+     ("C-c w e R" . denote-explore-rename-keywords)
      ;; Visualise denote
      ("C-c w e n" . denote-explore-network)
      ("C-c w e v" . denote-explore-network-regenerate)
